refactor: 이미지 최적화로 애니메이션 성능 개선

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,9 @@ body {
 /* 버튼 */
 .btn{
   position: absolute;
+  opacity: 0.0; /*투명*/
 }
+#event
 #event_btn{ /* 위치: event.ejs */
   margin-top: 100px;
   margin-left: 60px;
