--- a/views/layout/menu.ejs
+++ b/views/layout/menu.ejs
@@ -2,13 +2,13 @@
     <div class="layout">
       <div class="topnav">
         <ul>
-            <li><a href="/"><img src="btn/home.png" /></a></li>
-            <li><a href="/info"><img src="btn/info.png" /></a></li>
-            <li><a href="/plan"><img src="btn/plan.png" /></a></li>
-            <li><a href="/apply"><img src="btn/apply.png" /></a></li>
-            <li><a href="/award"><img src="btn/award.png" /></a></li>
+            <li><a href="/"><img src="btn/home.webp" /></a></li>
+            <li><a href="/info"><img src="btn/info.webp" /></a></li>
+            <li><a href="/plan"><img src="btn/plan.webp" /></a></li>
+            <li><a href="/apply"><img src="btn/apply.webp" /></a></li>
+            <li><a href="/award"><img src="btn/award.webp" /></a></li>
         </ul>
       </div>
-      <img src="가명·익명처리 기술 경진대회 홈페이지 초안_상단.jpg" width="100%" />
+      <img src="가명·익명처리-기술-경진대회-홈페이지-초안_상단.webp" width="100%" />
   </div>
 </div>
