--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,9 @@
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
+
+<script type="text/javascript">
+
+    alert("<%=path%>은(는) 올바르지 않은 주소입니다. 페이지 주소를 다시 확인해주세요.");
+  
+  </script>
