--- a/views/info.ejs
+++ b/views/info.ejs
@@ -13,7 +13,7 @@
         animate__fadeInDown">
           <div class="wrap">
               <div class="layout">
-                  <img src="가명·익명처리 기술 경진대회 홈페이지_2p_05.jpg" width="100%">
+                  <img src="가명·익명처리-기술-경진대회-홈페이지_2p_05.webp" width="100%">
               </div>
           </div>
         </div>
