--- a/views/layout/event.ejs
+++ b/views/layout/event.ejs
@@ -2,8 +2,8 @@
     <div class="layout">
         <div class="btn">
             <!--가명정보 알아보기 이벤트 이동-->
-            <a href="#" onclick="alert('준비중입니다.');"><img id="event_btn" src="btn/event.png"></a>
+            <a href="#" onclick="alert('준비중입니다.');"><img id="event_btn" src="btn/event.webp"></a>
         </div>
-        <img src="가명·익명처리 기술 경진대회 홈페이지_이벤트배너_01.jpg" width="100%">
+        <img src="가명·익명처리-기술-경진대회-홈페이지_이벤트배너_01.webp" width="100%">
     </div>
 </div>
